--- a/client/index.html
+++ b/client/index.html
@@ -382,7 +382,7 @@ most desire.</pre>
             <input type="submit" value="Add New Property" style="margin-left: 100%; margin-top: 30px; margin-bottom: 30px; background-color: #FA511E; padding-left: 90px;"> 
 
           </form>
-          <script src="upload.js"></script>
+          <script src="./scripts/upload.js"></script>
           <!-- <div class="uploads">
             <h4>Upload Photos</h4>
             <div class="content5">
