--- a/client/index.html
+++ b/client/index.html
@@ -324,7 +324,7 @@ most desire.</pre>
         <div>
           <h4 id="title">Add A New Property</h4>
           
-          <form class="form" action="/" method="post" enctype="multipart/form-data">
+          <form class="form" action="https://rental-server-m0k6.onrender.com/" method="post" enctype="multipart/form-data">
             <div>
               <label for="name">Name<span style="color: red;">*</span></label>
               <input type="text" placeholder="Enter Name" required>
