--- a/client/index.html
+++ b/client/index.html
@@ -376,10 +376,14 @@ most desire.</pre>
               <label for>Description<span style="color: red;">*</span></label>
               <textarea placeholder="Enter Description" required></textarea> 
             </div>  
+            <input type="submit" value="Add New Property" style="margin-left: 100%; margin-top: 30px; margin-bottom: 30px; background-color: #FA511E; padding-left: 90px;">
+            
+
+          </form>
             <!-- <label for="image">Upload Photo:</label>
             <input type="file" name="image" id="image" accept="image/*"></br>
-            Additional form fields if needed
-            <input type="submit" value="Add New Property" style="margin-left: 100%; margin-top: 30px; margin-bottom: 30px; background-color: #FA511E; padding-left: 90px;"> 
+           <input type="submit" value="Add New Property" style="margin-left: 100%; margin-top: 30px; margin-bottom: 30px; background-color: #FA511E; padding-left: 90px;">  Additional form fields if needed
+            
 
           </form>
           <script src="./scripts/upload.js"></script> -->
