--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <script src="./scripts/form.js"></script>
+    <!-- <script src="./scripts/form.js"></script> -->
   </head>
   <body>
     <section>
@@ -326,7 +326,7 @@ most desire.</pre>
         <div>
           <h4 id="title">Add A New Property</h4>
           <!-- FORM -->
-          <form class="form" action="/add-property" method="POST" enctype="application/x-www-form-urlencoded">
+          <form class="form" action="/properties" method="POST" enctype="application/x-www-form-urlencoded">
             <div>
               <label for="name">Name<span style="color: red;">*</span></label>
               <input type="text" name="username" placeholder="Enter Name" required>
@@ -378,11 +378,11 @@ most desire.</pre>
               <label for>Description<span style="color: red;">*</span></label>
               <textarea name="description" placeholder="Enter Description" required></textarea> 
             </div>  
-            <button type="submit" style="margin-left: 100%; margin-top: 30px; margin-bottom: 30px; background-color: #FA511E; padding-left: 10px; width: 150px; height: 30px">Add Property</button>
-            
+            <button class="submit" style="margin-left: 100%; margin-top: 30px; margin-bottom: 30px; background-color: #FA511E; padding-left: 10px; width: 150px; height: 30px">Add Property</button></br>
+            <p class="message"></p>
 
           </form>
-          <!-- <script src="./scripts/form.js"></script> -->
+          <script src="./scripts/form.js"></script>
             <!-- <label for="image">Upload Photo:</label>
             <input type="file" name="image" id="image" accept="image/*"></br>
            <input type="submit" value="Add New Property" style="margin-left: 100%; margin-top: 30px; margin-bottom: 30px; background-color: #FA511E; padding-left: 90px;">  Additional form fields if needed
