--- a/client/index.html
+++ b/client/index.html
@@ -468,7 +468,7 @@ a lacus fringilla finibus.</pre>
       <h4>Disclaimer</h4>
       <h5>Copyright © 2020 Minimumlivingcost. All rights reserved</h5>
     </footer>
-    <script>
+    <!-- <script>
       document.addEventListener('DOMContentLoaded', function() {
         var selectElements = document.querySelectorAll('.selectName select');
     
@@ -483,8 +483,8 @@ a lacus fringilla finibus.</pre>
           });
         });
       });
-    </script>
-    <script>
+    </script> -->
+    <!-- <script> -->
       // const apiUrl = 'https://rental-server-m0k6.onrender.com';  // Update with your server's URL
       
     </script>
